syntax = "proto3";

// option go_package = "github.com/SlamJam/dolgovnya-backend/internal/pb";

message BillStake {
    int64 user_id = 1;
    uint64 p = 2;
    uint64 q = 3;
}

message BillItem {
    string title = 1;
    int64 price = 2;
    int64 type = 3;
    repeated BillStake stakes = 4;
}

message BillShare {
    int64 user_id = 1;
    int64 value = 2;
}

message SplitRequest {
    repeated BillItem items = 1;
    repeated BillShare shares = 2;
}

message SplitResponse {
    uint64 id = 1;
}

service SplitTheBillService {
    rpc NewBillSplit(SplitRequest) returns (SplitResponse);
}
